# claude-marios-

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json
.claude/: launch.json
scripts/: setup-whisper.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: edge_test.rs
src-tauri/src/: lib.rs  main.rs
src/components/: BookAssistant.tsx  CoachMemoryCard.tsx  DailyBriefing.tsx  FloatingAssistant.tsx  Layout.tsx  MediaKitPreview.tsx  MicButton.tsx  PagePlaceholder.tsx  ProjectDetailDialog.tsx  SaleDialog.tsx  SalesChart.tsx  ScheduleAssistant.tsx  SeminarDetailDialog.tsx  SlideCanvas.tsx  SlideView.tsx  TabAssistant.tsx  TaskDetailDialog.tsx  TranslateDialog.tsx  WelcomeBanner.tsx  slideParts.tsx
src/components/ui/: button.tsx  card.tsx  (+3 more)
src/hooks/: useReminders.ts
src/lib/: assistantTools.ts  autocomplete.ts  bookEditor.ts  bookTools.ts  briefing.ts  chime.ts  coachMemory.ts  conversations.ts  date.ts  deckAssist.ts  decks.ts  documents.ts  greeting.ts  image.ts  kindleExport.ts  manuscript.ts  marketing.ts  mediakit.ts  notify.ts  ollama.ts  projects.ts  proofread.ts  recall.ts  recorder.ts  reset.ts  sales.ts  seminars.ts  settings.ts  skillCapabilities.ts  skills.ts  store.ts  tasks.ts  tts.ts  whisper.ts  writingAssist.ts  writingGoal.ts
src/pages/: Assistant.tsx  Book.tsx  Dashboard.tsx  Marketing.tsx  MediaKit.tsx  Presentations.tsx  Projects.tsx  Sales.tsx  Schedule.tsx  Seminars.tsx  Settings.tsx  Setup.tsx  Skills.tsx  Translate.tsx  Writing.tsx
