[package]
name = "authorhub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "authorhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Edge TTS (free Microsoft neural voices) speaks over a WebSocket with a
# time-based auth token — done in Rust so we can set the required headers.
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
sha2 = "0.10"
chrono = "0.4"

